apps/base/openclaw/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openclaw
  namespace: app-openclaw

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`openclaw.cluster.arpa`)
      kind: Rule
      services:
        - name: openclaw
          namespace: app-openclaw
          port: http
  tls:
    secretName: traefik-tls
